--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
                 <h4 class = productName>Shirts</h4>
                 <p class = "price">650</p>
                 <div class="numbers">
-                    <div class="remove">-</div>
+                    <button class="remove">-</button>
                     <p class="count">0</p>
-                    <div class="add">+</div>
+                    <button class="add">+</button>
                 </div>
             </div>
             <div class="product" id="product2">
                 <h4 class = productName>T-shirts</h4>
                 <p class = "price">400</p>
                 <div class="numbers">
-                    <div class="remove">-</div>
+                    <button class="remove">-</button>
                     <p class="count">0</p>
-                    <div class="add">+</div>
+                    <button class="add">+</button>
                 </div>
             </div>
             <div class="product" id="product3">
                 <h4 class = productName>Trouser</h4>
                 <p class = "price">800</p>
                 <div class="numbers">
-                    <div class="remove">-</div>
+                    <button class="remove">-</button>
                     <p class="count">0</p>
-                    <div class="add">+</div>
+                    <button class="add">+</button>
                 </div>
             </div>
         </div>
